--- a/static/pyvenv.cfg
+++ b/static/pyvenv.cfg
@@ -1,8 +1,8 @@
-home = c:\users\harry\appdata\local\programs\python\python39
+home = c:\users\appdata\local\programs\python\python39
 implementation = CPython
 version_info = 3.9.2.final.0
 virtualenv = 20.4.2
 include-system-site-packages = false
-base-prefix = c:\users\harry\appdata\local\programs\python\python39
-base-exec-prefix = c:\users\harry\appdata\local\programs\python\python39
-base-executable = c:\users\harry\appdata\local\programs\python\python39\python.exe
+base-prefix = c:\users\appdata\local\programs\python\python39
+base-exec-prefix = c:\users\appdata\local\programs\python\python39
+base-executable = c:\users\appdata\local\programs\python\python39\python.exe
